-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.1
-
None
-
-
c06db2db8 (118-based), 97af90e4a (118-based), a1e74c360 (112-based)
I cannot build Qt 6.6 on Ubuntu 22.04 using gcc 11, I always end up wit the same error.
I can use the same build process with 6.5 and it works fine.
I use the v6.6.1 tags
The configure line for Qt WebEngine is:
${qt_path}/bin/qt-configure-module ${qt_src}/qtwebengine
Other Qt modules were built with:
${qt_src}/configure -opensource -confirm-license \
-cmake-generator Ninja \
-linker lld \
-prefix ${qt_path} \
-release -force-debug-info -separate-debug-info \
-nomake tests -nomake examples \
-no-libudev \
-qt-doubleconversion \
-no-sql-mysql -plugin-sql-sqlite -qt-libjpeg -qt-libpng -xcb -bundled-xcb-xinput -sysconfdir /etc/xdg -qt-pcre -qt-harfbuzz -R . \
-skip qtdoc \
-skip qtqa
I end up with the following error:
In file included from gen/v8/v8_base_without_compiler_jumbo_48.cc:23:
./../../../../../qt/qtwebengine/src/3rdparty/chromium/v8/src/runtime/runtime-strings.cc:27:20: error: redefinition of ‘class v8::internal::{anonymous}::SaveAndClearThreadInWasmFlag’
27 | class V8_NODISCARD SaveAndClearThreadInWasmFlag {
|
Could be related to: QTBUG-114883
I've tried to disable the jumbo build with
${qt_path}/bin/qt-configure-module ${qt_src}/qtwebengine -no-webengine-webrtc -- -DFEATURE_webengine_jumbo_build=OFF
and now I have another error:
../../../../../qt/qtwebengine/src/3rdparty/chromium/content/renderer/pepper/pepper_media_device_manager.cc: In member function ‘virtual void content::PepperMediaDeviceManager::EnumerateDevices(PP_DeviceType_Dev, content::PepperDeviceEnumerationHostHelper::Delegate::DevicesOnceCallback)’: ../../../../../qt/qtwebengine/src/3rdparty/chromium/content/renderer/pepper/pepper_media_device_manager.cc:119:9: error: ‘base::ThreadTaskRunnerHandle’ has not been declared 119 | base::ThreadTaskRunnerHandle::Get()->PostTask( | ^~~~~~~~~~~~~~~~~~~~~~ ../../../../../qt/qtwebengine/src/3rdparty/chromium/content/renderer/pepper/pepper_media_device_manager.cc: In member function ‘int content::PepperMediaDeviceManager::OpenDevice(PP_DeviceType_Dev, const string&, PP_Instance, content::PepperMediaDeviceManager::OpenDeviceCallback)’: ../../../../../qt/qtwebengine/src/3rdparty/chromium/content/renderer/pepper/pepper_media_device_manager.cc:198:9: error: ‘base::ThreadTaskRunnerHandle’ has not been declared 198 | base::ThreadTaskRunnerHandle::Get()->PostTask( | ^~~~~~~~~~~~~~~~~~~~~~