Fix compilation without webrtc

Task-number: QTBUG-120984
Pick-to: 112-based
Change-Id: Idc98930b69de61ac115dd2702cf82d52a325d51e
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/531109
Reviewed-by: Michael Brüning <michael.bruning@qt.io>